save data to the database

--- a/sqlite/08-roommate-finder-cli/Rakefile
+++ b/sqlite/08-roommate-finder-cli/Rakefile
@@ -13,7 +13,7 @@ end
 task :scrape_rooms do
   # instantiate a scraper and have it find new rooms
   nyc_scraper = RoomScraper.new('https://newyork.craigslist.org/search/roo')
-  # nyc_scraper.call
+  nyc_scraper.call
   # chicago_scraper = RoomScraper.new('https://chicago.craigslist.org/search/roo')
   # chicago_scraper.call
 
