--- a/sinatra/01-basic-app/Gemfile
+++ b/sinatra/01-basic-app/Gemfile
@@ -10,3 +10,10 @@ gem 'shotgun'
 gem 'require_all'
 gem 'sqlite3'
 gem 'sinatra-activerecord'
+
+
+group :test, :development do
+  gem 'rspec'
+  gem 'capybara'
+  gem 'pry'
+end
