impl sinatra app with signup, login/out and multiple controllers

--- a/sinatra/00-basic-sinatra-skeleton-app/Rakefile
+++ b/sinatra/00-basic-sinatra-skeleton-app/Rakefile
@@ -1,5 +1,5 @@
 # load our environment
-require './config/environment'
+require_relative './config/environment'
 # make the rake tasks in the sinatra-activerecord gem available
 require 'sinatra/activerecord/rake'
 
