--- a/sinatra/21-sinatra-auth-app/Rakefile
+++ b/sinatra/21-sinatra-auth-app/Rakefile
@@ -1,5 +1,5 @@
 # load our environment
-require './config/environment'
+require_relative './config/environment'
 # make the rake tasks in the sinatra-activerecord gem available
 require 'sinatra/activerecord/rake'
 
