--- a/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/Gemfile
+++ b/08-rails/demo-apps/18-todo-mvc/todo-mvc-app/Gemfile
@@ -29,16 +29,22 @@ gem 'jbuilder', '~> 2.5'
 # gem 'redis', '~> 3.0'
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
+gem 'jquery-rails'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
+  gem 'pry'
+  gem 'pry-byebug'
+  gem 'rspec-rails'
+  gem "capybara"
+  gem "selenium-webdriver"
+  gem "simplecov"
+  gem "database_cleaner"
+  gem "sqlite3"
   gem 'byebug', platforms: [:mri, :mingw, :x64_mingw]
-  # Adds support for Capybara system testing and selenium driver
-  gem 'capybara', '~> 2.13'
-  gem 'selenium-webdriver'
 end
 
 group :development do
