--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea/
 
 demos/04-javascript-rock-dodger/node_modules
+08-rails/demo-apps/48-omniauth-facebook-auth/.idea/
+08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/tmp/
+08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/log/
+08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/db/*.sqlite3
