--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/tmp/
 08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/log/
 08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/db/*.sqlite3
+08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/.env
