--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/02-rails-form_tag-readme/log/
 08-rails/review/02-rails-form_tag-readme/tmp/
 08-rails/review/02-rails-form_tag-readme/.byebug_history
+
+08-rails/review/03-rails-form_tag-lab/log/
+08-rails/review/03-rails-form_tag-lab/tmp/
+08-rails/review/03-rails-form_tag-lab/db/*.sqlite
