--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/03-rails-form_tag-lab/log/
 08-rails/review/03-rails-form_tag-lab/tmp/
 08-rails/review/03-rails-form_tag-lab/db/*.sqlite
+
+08-rails/review/04-rails-create-action-lab/log/
+08-rails/review/04-rails-create-action-lab/tmp/
+08-rails/review/04-rails-create-action-lab/db/*.sqlite
