--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,9 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/04-rails-create-action-lab/log/
 08-rails/review/04-rails-create-action-lab/tmp/
 08-rails/review/04-rails-create-action-lab/db/*.sqlite
+
+08-rails/review/05-rails-index-show-new-create-lab/log/
+08-rails/review/05-rails-index-show-new-create-lab/tmp/
+08-rails/review/05-rails-index-show-new-create-lab/db/*.sqlite
+
+
