--- a/.gitignore
+++ b/.gitignore
@@ -23,4 +23,7 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/05-rails-index-show-new-create-lab/tmp/
 08-rails/review/05-rails-index-show-new-create-lab/db/*.sqlite
 
+08-rails/review/06-rails-edit-update-action-readme/log/
+08-rails/review/06-rails-edit-update-action-readme/tmp/
+08-rails/review/06-rails-edit-update-action-readme/db/*.sqlite
 
