--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,7 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/06-rails-edit-update-action-readme/tmp/
 08-rails/review/06-rails-edit-update-action-readme/db/*.sqlite
 
+08-rails/review/*/log/
+08-rails/review/*/tmp/
+08-rails/review/*/db/*.sqlite3
+
