--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/*/tmp/
 08-rails/review/*/db/*.sqlite3
 08-rails/review/*/.byebug_history
+08-rails/review/*/failures.txt
