--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,4 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/review/*/db/*.sqlite3
 08-rails/review/*/.byebug_history
 08-rails/review/*/failures.txt
+08-rails/review/*/examples.txt
