impl validations on models - passing specs

--- a/08-rails/review/14-validations-with-form_tag-rails-lab/Gemfile
+++ b/08-rails/review/14-validations-with-form_tag-rails-lab/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+ruby '2.3.1'
 gem 'rails', '4.2.7.1'
 gem 'sqlite3'
 gem 'rspec-rails'
@@ -11,6 +12,7 @@ gem 'sdoc', '~> 0.4.0', group: :doc
 group :development, :test do
   gem 'pry'
   gem 'capybara'
+	gem 'byebug'
 end
 
 group :development do
