--- a/.gitignore
+++ b/.gitignore
@@ -7,9 +7,9 @@ demos/04-javascript-rock-dodger/node_modules
 08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/db/*.sqlite3
 08-rails/demo-apps/48-omniauth-facebook-auth/omniauth-demo/.env
 
-08-rails/review/*/log/
-08-rails/review/*/tmp/
-08-rails/review/*/db/*.sqlite3
-08-rails/review/*/.byebug_history
-08-rails/review/*/failures.txt
-08-rails/review/*/examples.txt
+08-rails/review/*/*/log/
+08-rails/review/*/*/tmp/
+08-rails/review/*/*/db/*.sqlite3
+08-rails/review/*/*/.byebug_history
+08-rails/review/*/*/failures.txt
+08-rails/review/*/*/examples.txt
