--- a/08-rails/review/41-50/50-devise-omniauth-roles-demo/Gemfile
+++ b/08-rails/review/41-50/50-devise-omniauth-roles-demo/Gemfile
@@ -31,6 +31,8 @@ gem 'devise', '~> 4.4', '>= 4.4.1'
 gem 'dotenv-rails', '~> 2.2', '>= 2.2.1'
 gem 'omniauth', '~> 1.8', '>= 1.8.1'
 gem 'omniauth-facebook', '~> 4.0'
+gem 'bootstrap-sass', '~> 3.3', '>= 3.3.7'
+gem 'jquery-rails', '~> 4.3', '>= 4.3.1'
 
 
 group :development, :test do
