--- a/09-javascript-review/labs/41-50/50-javascript-intro-to-mocha/package.json
+++ b/09-javascript-review/labs/41-50/50-javascript-intro-to-mocha/package.json
@@ -32,5 +32,8 @@
     "mocha": "^2.5.3",
     "mocha-multi": "^0.9.0",
     "node-inspector": "^0.12.8"
+  },
+  "dependencies": {
+    "expect": "^1.20.2"
   }
 }
